# Data_extractor

./: .gitignore  LICENCE  README.md  THIRD_PARTY_NOTICES.md  licenses.json  main.py  pyproject.toml  sample_data.txt  step1.py
aws-deployment/: analytics-response.json  cloudformation.yaml  deploy.sh  lambda_function.py  manage_price_tracker.sh  quick_commands.md  requirements.txt  shutdown-price-tracker.sh  test_analytics.json  test_products.json
data/: products_phones_20250611_013700.csv
data-extractor/: pyproject.toml
docs/: aws_deployment.md
src/: e-commerce.py  jobs.py
src/aws/: lambda_function.py
src/local/: e-commerce.py  e-commerce_beta.py  vis.py
src/messing/: step1.py  step2.py  step3.py  step4.py  step5.py  step6.py
